Fixed spacing issue with layer names and added a space between the + and the add layer text

--- a/js/components/LayerList.css
+++ b/js/components/LayerList.css
@@ -24,11 +24,12 @@
   background-color: white;
 }
 .layer-tree-panel {
-  padding-right: 10px;
+  padding-right: 30px;
   border: 1px solid #cccccc;
   background-color: white;
   max-height: 450px;
-  overflow: auto;
+  margin-right: 38px;
+  overflow-y: auto;
 }
 .layer-tree-panel li {
   list-style-type: none;
